--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "prince",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^13.2.0",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "pg": "^8.13.3",
